# moonray

./: .clang-format  .gitignore  CMakeLists.txt  Presenz.md  README.md  SConscript  SDKScript  flowpipeline.yaml  package.py  pull_request_template.md
cmd/: CMakeLists.txt  README.md
cmd/brdf_cmd/: CMakeLists.txt
cmd/brdf_cmd/brdf_cylinder_extract/: CMakeLists.txt  EdgeDetect.cc  EdgeDetect.h  Image.cc  Image.h  SConscript  main.cc
cmd/brdf_cmd/brdf_integrate/: CMakeLists.txt  SConscript  main.cc
cmd/brdf_cmd/brdf_resample/: CMakeLists.txt  SConscript  main.cc
cmd/denoise_cmd/: CMakeLists.txt  SConscript  main.cc
cmd/point_generation_cmd/: ArgumentParser.h  Array.h  CMakeLists.txt  DynamicHyperGrid.h  Makefile.Darwin  Makefile.Linux  NPoint.h  PerfectPowerArray.h  PointContainer2D.h  ProgressBar.h  README.md  StaticHyperGrid.h  StaticVector.h  ascii_to_binary.cc  blue_noise_pd_progressive_generation.cc  convert_samples_to_array.py  discrepancy.cc  pd_generation.cc  pd_generation.h  pd_progressive_elimination.cc  pd_progressive_generation.cc  pmj02.cc  r_sequence.h  reorder.cc  stratified_best_candidate.cc  util.h
cmd/point_generation_cmd/scripts/: animate_plot.py  bc_1d_gen.sh  gen_pd_points.sh  generate_pd_progressive_integrator.bash  generate_set_poisson.bash  mvn.bash  reorder.bash  sequence_discrepancy.py  wc.bash
cmd/raas_cmd/: CMakeLists.txt
cmd/raas_cmd/moonray/: CMakeLists.txt  SConscript  moonray.cc
dso/: CMakeLists.txt
dso/camera/: CMakeLists.txt
dso/camera/BakeCamera/: BakeCamera.cc  CMakeLists.txt  SConscript  attributes.cc
dso/camera/DomeMaster3DCamera/: CMakeLists.txt  DomeMaster3DCamera.cc  SConscript  attributes.cc
dso/camera/FisheyeCamera/: CMakeLists.txt  FisheyeCamera.cc  attributes.cc
dso/camera/OrthographicCamera/: CMakeLists.txt  OrthographicCamera.cc  SConscript  attributes.cc
dso/camera/PerspectiveCamera/: CMakeLists.txt  PerspectiveCamera.cc  SConscript  attributes.cc
dso/camera/PresenZCamera/: CMakeLists.txt  PresenZCamera.cc  SConscript  attributes.cc
dso/camera/SphericalCamera/: CMakeLists.txt  SConscript  SphericalCamera.cc  attributes.cc
dso/computation/mcrt_rt/: McrtRtComputation.cc  McrtRtComputation.h  McrtRtComputationDebugConsole.cc  McrtRtComputationDebugConsole.h  McrtRtComputationRealtimeController.cc  McrtRtComputationRealtimeController.h  McrtRtComputationStatistics.h  SConscript
dso/computation/mcrt_rt_dispatch/: McrtRtDispatchComputation.cc  McrtRtDispatchComputation.h  McrtRtDispatchComputationDebugConsole.cc  McrtRtDispatchComputationDebugConsole.h  McrtRtDispatchComputationStatistics.h  SConscript
dso/computation/mcrt_rt_merge/: McrtRtMergeComputation.cc  McrtRtMergeComputation.h  McrtRtMergeComputationFb.cc  McrtRtMergeComputationFb.h  SConscript
dso/displacement/: CMakeLists.txt
dso/displacement/CombineDisplacement/: CMakeLists.txt  CombineDisplacement.cc  CombineDisplacement.ispc  CombineDisplacement.json  SConscript
dso/displacement/NormalDisplacement/: CMakeLists.txt  NormalDisplacement.cc  NormalDisplacement.ispc  NormalDisplacement.json  SConscript
dso/displacement/VectorDisplacement/: CMakeLists.txt  SConscript  VectorDisplacement.cc  VectorDisplacement.ispc  VectorDisplacement.json
dso/displayfilter/: CMakeLists.txt
dso/displayfilter/ImageDisplayFilter/: CMakeLists.txt  ImageDisplayFilter.cc  ImageDisplayFilter.ispc  ImageDisplayFilter.json  SConscript
dso/geometry/: CMakeLists.txt
dso/geometry/RdlCurve/: CMakeLists.txt  RdlCurveGeometry.cc  SConscript  attributes.cc
dso/geometry/RdlInstancerGeometry/: CMakeLists.txt  RdlInstancerGeometry.cc  SConscript  attributes.cc
dso/geometry/RdlMesh/: CMakeLists.txt  README.md  RdlMeshGeometry.cc  SConscript  attributes.cc  polymesh2rdlmesh.py
dso/geometry/RdlPoint/: CMakeLists.txt  RdlPointGeometry.cc  SConscript  attributes.cc
dso/geometry/Vdb/: CMakeLists.txt  SConscript  VdbGeometry.cc  attributes.cc
dso/light/: CMakeLists.txt
dso/light/CylinderLight/: CMakeLists.txt  CylinderLight.cc  SConscript  attributes.cc
dso/light/DiskLight/: CMakeLists.txt  DiskLight.cc  SConscript  attributes.cc
dso/light/DistantLight/: CMakeLists.txt  DistantLight.cc  SConscript  attributes.cc
dso/light/EnvLight/: CMakeLists.txt  EnvLight.cc  SConscript  attributes.cc
dso/light/MeshLight/: CMakeLists.txt  MeshLight.cc  SConscript  attributes.cc
dso/light/PortalLight/: CMakeLists.txt  PortalLight.cc  attributes.cc
dso/light/RectLight/: CMakeLists.txt  RectLight.cc  SConscript  attributes.cc
dso/light/SphereLight/: CMakeLists.txt  SConscript  SphereLight.cc  attributes.cc
dso/light/SpotLight/: CMakeLists.txt  SConscript  SpotLight.cc  attributes.cc
dso/lightfilter/: CMakeLists.txt
dso/lightfilter/BarnDoorLightFilter/: BarnDoorLightFilter.cc  CMakeLists.txt  SConscript  attributes.cc
dso/lightfilter/ColorRampLightFilter/: CMakeLists.txt  ColorRampLightFilter.cc  SConscript  attributes.cc
dso/lightfilter/CombineLightFilter/: CMakeLists.txt  CombineLightFilter.cc  SConscript  attributes.cc
dso/lightfilter/CookieLightFilter/: CMakeLists.txt  CookieLightFilter.cc  SConscript  attributes.cc
dso/lightfilter/CookieLightFilter_v2/: CMakeLists.txt  CookieLightFilter_v2.cc  SConscript  attributes.cc
dso/lightfilter/DecayLightFilter/: CMakeLists.txt  DecayLightFilter.cc  SConscript  attributes.cc
dso/lightfilter/IntensityLightFilter/: CMakeLists.txt  IntensityLightFilter.cc  SConscript  attributes.cc
dso/lightfilter/RodLightFilter/: CMakeLists.txt  RodLightFilter.cc  SConscript  attributes.cc
dso/map/: CMakeLists.txt
dso/material/: CMakeLists.txt
dso/volume/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/deepfile/: CMakeLists.txt  DcxAPI.h  DcxChannelAlias.h  DcxChannelContext.h  DcxChannelDefs.h  DcxChannelSet.cpp  DcxChannelSet.h  DcxDeepFlags.h  DcxDeepImageTile.cpp  DcxDeepImageTile.h  DcxDeepPixel.cpp  DcxDeepPixel.h  DcxDeepTile.cpp  DcxDeepTile.h  DcxImageFormat.cpp  DcxImageFormat.h  DcxPixel.h  DcxPixelTile.cpp  DcxPixelTile.h  DcxSpMask.h  SConscript  version.h
lib/rendering/: CMakeLists.txt  README.md
(+1344 files in other folders)
