# Copyright 2023-2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

include(MoonrayDso)

add_subdirectory(camera)
#add_subdirectory(computation)
add_subdirectory(displacement)
add_subdirectory(displayfilter)
add_subdirectory(geometry)
add_subdirectory(light)
add_subdirectory(lightfilter)
add_subdirectory(map)
add_subdirectory(material)
add_subdirectory(volume)
