# Copyright 2023-2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(CylinderLight)
add_subdirectory(DiskLight)
add_subdirectory(DistantLight)
add_subdirectory(EnvLight)
add_subdirectory(MeshLight)
add_subdirectory(RectLight)
add_subdirectory(SphereLight)
add_subdirectory(SpotLight)
