# Copyright 2023-2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(AttributeMap)
add_subdirectory(CheckerboardMap)
add_subdirectory(DebugMap)
add_subdirectory(ExtraAovMap)
add_subdirectory(Image)
add_subdirectory(ListMap)
add_subdirectory(OpenVdbMap)
add_subdirectory(UsdPrimvarReader_float)
add_subdirectory(UsdPrimvarReader_float2)
add_subdirectory(UsdPrimvarReader_float3)
add_subdirectory(UsdPrimvarReader_int)
add_subdirectory(UsdPrimvarReader_point)
add_subdirectory(UsdPrimvarReader_vector)
add_subdirectory(UsdTransform2d)
add_subdirectory(UsdUVTexture)
