# Copyright 2023-2024 DreamWorks Animation LLC
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(file_resource)
add_subdirectory(geometry)
add_subdirectory(mcrt_macros)
add_subdirectory(mcrt_util)
add_subdirectory(time)
# no longer used
# add_subdirectory(rec_load)
# add_subdirectory(mcrt_comp)
